# programme

./: .gitignore  CHANGELOG.md  README.md  environment.yml  main.py  main_ros2.py  pyrightconfig.json  requirements.txt
docs/: README.md  grasp_execution_manual.md  phase1_kickoff.md  phase2_hardware_kickoff.md  phase3_control_kickoff.md  phase4_ui_bridge_kickoff.md  phase5_task_kickoff.md  phase6_sim_base_kickoff.md  phase6_sim_gazebo_kickoff.md  phase6_vision_kickoff.md  phase8_function_manual.md  phase8_glossary.md  phase8_grasp_execution_manual.md  phase8_pointcloud_manual.md  phase8_semantic_vision_manual.md  phase8_tactile_ops_manual.md  phase8_web_manual.md  pointcloud_geometry_manual.md  semantic_perception_manual.md  system_overview_manual.md  tactile_operations_manual.md  terminology_guide.md  web_console_manual.md  windows_ros2_realsense_quickstart.md  windows_vm_one_click_runbook.md  windows_vm_split_phaseA.md  windows_vm_split_phaseB.md
ros2_ws/src/tactile_bringup/: package.xml  setup.py
ros2_ws/src/tactile_bringup/config/: manual_pose_debug.yaml  phase2_hardware.yaml  phase3_control.yaml  phase5_task.yaml  phase5_task_hardware.yaml  phase6_sim_base.yaml  phase6_sim_gazebo.yaml  phase6_vision.yaml  phase8_modular_grasp.yaml  programme_grasp_stack.yaml  split_vm_app.yaml  tactile_hardware_only.yaml  vision_pipeline.yaml
ros2_ws/src/tactile_bringup/launch/: grasp_backend_visualization.launch.py  grasp_shadow_visualization.launch.py  manual_pose_debug.launch.py  phase2_hardware.launch.py  phase3_control.launch.py  phase5_task.launch.py  phase6_sim_base.launch.py  phase6_sim_gazebo.launch.py  phase6_vision.launch.py  phase8_graspgen_shadow.launch.py  phase8_graspgen_viz.launch.py  phase8_modular_grasp.launch.py  phase8_vision_web.launch.py  phase8_web_ui.launch.py  programme_grasp_stack.launch.py  programme_system.launch.py  split_vm_app.launch.py  tactile_grasp_studio.launch.py  tactile_hardware_only.launch.py  vision_pipeline.launch.py  vision_web_stack.launch.py  web_console_stack.launch.py
ros2_ws/src/tactile_bringup/tactile_bringup/: fake_tactile_publisher.py
ros2_ws/src/tactile_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_control/resource/: tactile_control
ros2_ws/src/tactile_control/tactile_control/: __init__.py  arm_control_node.py  grasp_profile_node.py
ros2_ws/src/tactile_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_hardware/resource/: tactile_hardware
ros2_ws/src/tactile_hardware/tactile_hardware/: __init__.py  arm_driver_node.py  gripper_driver_node.py  legacy_runtime.py  stm32_bridge_node.py  stm32_tactile_codec.py  tactile_sensor_node.py
ros2_ws/src/tactile_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/tactile_interfaces/action/: ExecuteDemo.action  ExecuteTask.action  GenerateTaskGrasps.action  MoveArmJoints.action  SearchTarget.action  VerifyGrasp.action
ros2_ws/src/tactile_interfaces/msg/: AffordanceGroundingResult.msg  ArmState.msg  DetectionResult.msg  GraspProposal.msg  GraspProposalArray.msg  GripperState.msg  MaskChannel.msg  SemanticTask.msg  TactileRaw.msg  TaskExecutionStatus.msg  TaskGoal.msg  TaskGraspCandidate.msg
ros2_ws/src/tactile_interfaces/srv/: MoveArmJoint.srv  MoveArmJoints.srv  SetGripperForce.srv
ros2_ws/src/tactile_moveit_config/: .setup_assistant  package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_moveit_config/config/: dofbot.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
ros2_ws/src/tactile_moveit_config/launch/: moveit_gazebo_demo.launch.py
ros2_ws/src/tactile_moveit_config/resource/: tactile_moveit_config
ros2_ws/src/tactile_moveit_config/tactile_moveit_config/: __init__.py
ros2_ws/src/tactile_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_sim/config/: ros2_controllers.yaml
ros2_ws/src/tactile_sim/launch/: gazebo_arm.launch.py
ros2_ws/src/tactile_sim/resource/: tactile_sim
ros2_ws/src/tactile_sim/tactile_sim/: __init__.py  arm_sim_driver_node.py  sim_realsense_adapter_node.py  sim_search_sweep_node.py  sim_target_pose_node.py  tactile_sim_node.py
ros2_ws/src/tactile_sim/urdf/: dofbot_gazebo.urdf.xacro  phase6_arm.urdf.xacro
ros2_ws/src/tactile_sim/worlds/: phase6_tabletop.world  phase6_tabletop_camera_gui.world
ros2_ws/src/tactile_task/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_task/resource/: tactile_task
ros2_ws/src/tactile_task/tactile_task/: __init__.py  demo_task_node.py  search_target_skill_node.py  task_executive_node.py
ros2_ws/src/tactile_task_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/tactile_task_cpp/src/: manual_pose_debug_node.cpp  sim_pick_task_node.cpp
ros2_ws/src/tactile_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_vision/resource/: tactile_vision
ros2_ws/src/tactile_vision/tactile_vision/: __init__.py  cloud_filter_node.py  detector_seg_node.py  grasp_backend_node.py  grasp_input_cloud_node.py  graspgen_backend_helper.py  graspgen_geometry.py  graspgen_topk_bridge_node.py  graspgen_topk_helper.py  modular_common.py  primitive_fit_node.py  qwen_semantic_node.py  realsense_camera_node.py  realsense_monitor_node.py
ros2_ws/src/tactile_vision_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/tactile_vision_cpp/src/: latest_frame_relay_node.cpp
ros2_ws/src/tactile_web_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_web_bridge/frontend/: REGRESSION.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ros2_ws/src/tactile_web_bridge/frontend/src/: App.tsx  ControlPage.tsx  LogsPage.tsx  TactilePage.tsx  VisionPage.tsx  api.ts  appHelpers.ts  appUi.tsx  styles.css  types.ts
ros2_ws/src/tactile_web_bridge/frontend/tests/: mock-gateway.mjs
ros2_ws/src/tactile_web_bridge/frontend/tests/e2e/: app-shell.spec.ts  connection.spec.ts  control.spec.ts  estop.spec.ts  helpers.ts  tactile-logs.spec.ts  vision.spec.ts
ros2_ws/src/tactile_web_bridge/resource/: tactile_web_bridge
ros2_ws/src/tactile_web_bridge/tactile_web_bridge/: __init__.py  web_gateway.py
(+138 files in other folders)
