<?xml version="1.0"?>
<package format="3">
  <name>tactile_bringup</name>
  <version>0.1.0</version>
  <description>Bringup and staged launch files for phase 1-6 ROS2 migration.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tactile_interfaces</depend>
  <depend>tactile_hardware</depend>
  <depend>tactile_control</depend>
  <depend>tactile_task</depend>
  <depend>tactile_ui_bridge</depend>
  <depend>tactile_vision</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
