<?xml version="1.0"?>
<package format="3">
  <name>tactile_control</name>
  <version>0.1.0</version>
  <description>ROS2 control-layer package for tactile system phase 3 migration.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>tactile_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
