<?xml version="1.0"?>
<package format="3">
  <name>tactile_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration and Gazebo/RViz planning launch for the DOFBOT simulation.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>rviz2</depend>
  <depend>tactile_bringup</depend>
  <depend>tactile_sim</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
