<?xml version="1.0"?>
<package format="3">
  <name>tactile_task</name>
  <version>0.1.0</version>
  <description>ROS2 task orchestration package for phase 5 migration.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>tactile_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
