<?xml version="1.0"?>
<package format="3">
  <name>tactile_vision</name>
  <version>0.1.0</version>
  <description>Vision bridge nodes for phase 6 ROS2 migration.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>tactile_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
