<?xml version="1.0"?>
<package format="3">
  <name>tactile_vision_cpp</name>
  <version>0.1.0</version>
  <description>C++ high-rate camera relay nodes for stable ROS2 vision streaming.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
