<?xml version="1.0"?>
<package format="3">
  <name>tactile_web_bridge</name>
  <version>0.1.0</version>
  <description>Web gateway for Programme tactile manipulation UI.</description>
  <maintainer email="whisp@users.noreply.github.com">whisp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tactile_interfaces</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
